--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="aos.css" />
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="aos.js"></script>
     <title>Boone Osborn</title>
   </head>
   <body>
@@ -15,3 +18,8 @@
     <div id="style"></div>
   </body>
 </html>
+<script>
+    jQuery(document).ready(function(){
+        AOS.init({duration: 1000});
+    });
+</script>
